# libvoicefeat

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
cmake/: libvoicefeatConfig.cmake.in
include/libmfcc/: libmfcc.h
include/libmfcc/features/: mfcc.h
include/libmfcc/utils/: path.h
include/libvoicefeat/: config.h  libvoicefeat.h
include/libvoicefeat/audio/: audio_buffer.h  audio_reader.h  mp3_audio_reader.h  wav_audio_reader.h
include/libvoicefeat/compat/: source_location.h
include/libvoicefeat/dsp/: dft_transformer.h  fft_transformer.h  frame.h  frame_extractor.h  resampler.h  transformer.h  window_functiion.h
include/libvoicefeat/features/: delta.h  feature.h  feature_builder.h  mel_scale.h  mfcc.h
include/libvoicefeat/features/filterbanks/: bark_filterbank.h  filterbank.h  filterbank_utils.h  gammatone_filterbank.h  linear_filterbank.h  mel_filterbank.h
include/libvoicefeat/utils/: constants.h  path.h
src/: libmfcc.cpp  libvoicefeat.cpp  minimp3_single.cpp  mp3_audio_reader.cpp
src/audio/: mp3_audio_reader.cpp  wav_audio_reader.cpp
src/dsp/: dft_transformer.cpp  fft_transformer.cpp  frame_exctractor.cpp  resampler.cpp  window_function.cpp
src/features/: delta.cpp  feature.cpp  feature_builder.cpp  mel_scale.cpp  mfcc.cpp
src/features/filterbanks/: bark_filterbank.cpp  filterbank_factory.cpp  filterbank_utils.cpp  gammatone_filterbank.cpp  linear_filterbank.cpp  mel_filterbank.cpp
tests/: CMakeLists.txt  delta_features.cpp  dsp_steps.cpp  mfcc_pipeline.cpp
